5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1785_3134.log
== TEST (2019-05-30 11:15:14) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
m=0
while (i<b):
	m += m + (v[n-1]**2)/(b)
	i+=1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:17:34) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
m=0
while (i<b):
	m += (m + (v[n-1]**2)/(b))**1/2
	i+=1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:19:09) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
m=0
while (i<b):
	m += m +((v[n-1]**2)/(b))**1/2
	i+=1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:10) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
m=0
while (i<b):
	m += m +(((v[0]**2))+(v[1]**2)v[n-1]/(b))**1/2
	i+=1
print(round(m,2)
	
-- ERROR:
File "XXXX", line 8
    m += m +(((v[0]**2))+(v[1]**2)v[n-1]/(b))**1/2
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:19) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
m=0
while (i<b):
	m += m +(((v[0]**2))+(v[1]**2)v[n-1]/(b))**1/2
	i+=1
print(round(m,2)
	
-- ERROR:
File "XXXX", line 8
    m += m +(((v[0]**2))+(v[1]**2)v[n-1]/(b))**1/2
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:24) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
m=0
while (i<b):
	m = m +(((v[0]**2))+(v[1]**2)v[n-1]/(b))**1/2
	i+=1
print(round(m,2)
	
-- ERROR:
File "XXXX", line 8
    m = m +(((v[0]**2))+(v[1]**2)v[n-1]/(b))**1/2
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:44) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
m=0
while (i<b):
	m = m +(((v[0]**2))+(v[1]**2)+v[n-1]/(b))**1/2
	i+=1
print(round(m,2)
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:56) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
m=0
while (i<b):
	m = m +(((v[0]**2))+(v[1]**2)+v[n-1]/(b))**1/2
	i+=1
print(round(m,2)
-- ERROR:
File "XXXX", line 11
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:24:50) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
m=0
while (i<b):
	m = m +(((v[0]**2))+(v[1]**2)+v[n-1]/(b))**1/2
	i+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:52) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
f=0
#
while (i<b):
	m = f +(((v[n]**2))/(b))**1/2
	i+=1
	f+=1
	n+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:29:08) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
n=0
f=0
#
while (i<b):
	m = f +(((v[n]**2))/(b))**1/2
	i+=1
	f+=1
	n+=1
print(round(m,2))
-- EXECUTION TIME:
0.407612
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
10.46
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
8.63
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
6.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:06) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
#
while (i<b):
	m = f +(((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:25) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
#
while (i<b):
	m = f +(((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:31:22) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
while (i<b):
	m = f +(((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- EXECUTION TIME:
0.590926
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
10.46
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
8.63
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
6.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:30) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
while (i<b):
	m =(((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:54) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
while (i<b):
	m =f +(((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:04) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
while (i<b):
	m =f +(((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:46) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
while (i<b):
	m =f +(((v[i]**2))/(b))**1/2
	i+=1
	f-=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:04) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
while (i<b):
	m =f +(((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:57) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
m=0
while (i<b):
	m =f +(((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:16) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
m=0
while (i<b):
	m+=(((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:00) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
m=0
while (i<b):
	m= f + (((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:26) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
m=0
while (i<b):
	m= f + (((v[i]**2))/(b))**1/2
	i+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:45:54) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
m=0
while (i<b):
	m= f + (((v[i]**2))/(b))**1/2
	i+=1
print(round(m,2))
-- EXECUTION TIME:
0.346564
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
4.46
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
3.63
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
2.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:46:16) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
m=0
while (i<b):
	m=(((v[i]**2))/(b))**1/2
	i+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:46:32) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
m=0
while (i<b):
	m=(((v[i]**2))/(b))**1/2
	i+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:46:49) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
while (i<b):
	m= f + (((v[i]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:34) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
while (i<b):
	m= f + (((v[i-1]**2))/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:50:39) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
m=0
while (i<b):
	m= f + ((v[i]**2)/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- EXECUTION TIME:
0.568155
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
10.46
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
8.63
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
6.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:01) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
m=0
while (i<b):
	m= ((v[i]**2)/(b))**1/2
	i+=1

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:52:14) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
m=0
while (i<b):
	m= ((v[i]**2)/(b))**1/2
	i+=1

print(round(m,2))
-- EXECUTION TIME:
0.341925
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
5.29
---- user output:
4.46
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
4.28
---- user output:
3.63
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.41
---- user output:
2.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:19) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor:")))
i =0 
b = size(v)
f=0
m=0
while (i<b):
	m= f + ((v[i]**2)/(b))**1/2
	i+=1
	f+=1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
